# cargo-onefile

./: Cargo.toml  README.md
src/: args.rs  main.rs  metadata.rs
