[package]
name = "cargo-onefile"
version = "0.2.0"
edition = "2021"
description = "A cargo subcommand to bundle a Rust project into a single file"
repository = "https://github.com/exotik850/cargo-onefile"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "bundle", "single-file", "binary"]
authors = ["exotik850"]

[dependencies]
anyhow = "1.0.80"
cargo_toml = "0.19.2"
clap = { version = "4.5.2", features = ["derive"] }
rayon = "1.9.0"
ignore = { version = "0.4.22", features = ["simd-accel"] }
chrono = "0.4.35"
clap-cargo = "0.15.1"
